bekomme die geo daten nicht ins viewmodel

--- a/app/src/main/res/layout/fragment_g_e_o.xml
+++ b/app/src/main/res/layout/fragment_g_e_o.xml
@@ -9,6 +9,16 @@
     tools:context=".ui.GEO_Fragment">
 
 
+    <TextView
+        android:id="@+id/GeoLocTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="geoLoc"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/nextFAB"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/prevFAB"
