--- a/app/src/main/res/layout/fragment_home_item.xml
+++ b/app/src/main/res/layout/fragment_home_item.xml
@@ -20,10 +20,10 @@
 
             <ImageView
                 android:id="@+id/genericIV"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/baseline_image_24" />
+                android:src="@drawable/baseline_my_location_24" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -32,15 +32,15 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/genericHeadTV"
+                    android:id="@+id/LonLatTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Title"
+                    android:text="lon/lat"
                     android:textSize="32sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/genericDescTV"
+                    android:id="@+id/DisplayNameTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Description"
