--- a/app/src/main/res/layout/fragment_home_item.xml
+++ b/app/src/main/res/layout/fragment_home_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:backgroundTint="@color/white"
+        android:padding="4dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
