--- a/app/src/main/res/layout-land/fragment_g_e_o.xml
+++ b/app/src/main/res/layout-land/fragment_g_e_o.xml
@@ -8,17 +8,18 @@
     android:background="@color/ufeMint"
     tools:context=".ui.GEO_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/textView2"
+
+    <TextView
+        android:id="@+id/GeoLocTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GEO Fragment"
-        android:textSize="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="geoLoc"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/nextFAB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/prevFAB"
         android:layout_width="wrap_content"
