--- a/app/src/main/res/layout-land/fragment_home_item.xml
+++ b/app/src/main/res/layout-land/fragment_home_item.xml
@@ -11,6 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:backgroundTint="@color/white"
+        android:padding="4dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:layout_margin="8dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -36,7 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="lon/lat"
-                    android:textSize="32sp"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
