--- a/app/src/main/res/layout/fragment_home_item.xml
+++ b/app/src/main/res/layout/fragment_home_item.xml
@@ -12,6 +12,9 @@
         android:layout_height="0dp"
         android:backgroundTint="@color/white"
         android:padding="4dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:layout_margin="8dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
