2 more recycler views added. adapter to come soon

--- a/app/src/main/res/layout/fragment_locations.xml
+++ b/app/src/main/res/layout/fragment_locations.xml
@@ -5,20 +5,23 @@
     android:id="@+id/settingsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ufeOcker "
+    android:background="@color/ufeOcker"
     tools:context=".ui.Locations_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Locations Fragment"
-        android:textSize="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/locationRV"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/fragment_locations__item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/prevFAB"
