--- a/app/src/main/res/layout/fragment_locations__item.xml
+++ b/app/src/main/res/layout/fragment_locations__item.xml
@@ -7,7 +7,7 @@
     tools:context=".Locations_Item_Fragment">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/theCardView"
+        android:id="@+id/theLocationCardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="8dp"
