--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
     <!-- TODO: Update blank fragment layout -->
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_generic"
+            android:id="@+id/homeRV"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
