--- a/app/src/main/res/layout/fragment_places_detail.xml
+++ b/app/src/main/res/layout/fragment_places_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.ticktrax.Places_Detail_Fragment">
+    tools:context=".Places_Detail_Fragment">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
