--- a/app/src/main/res/layout/fragment_export2_mail.xml
+++ b/app/src/main/res/layout/fragment_export2_mail.xml
@@ -6,19 +6,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ufeOrange"
-    tools:context=".ui.Export_Fragment">
+    tools:context=".ui.Export2Mail_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="exportFragment"
-        android:textSize="32dp"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/exportDataTV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="exportFragment"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/sendItFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="24dp"
+        android:clickable="true"
+        android:src="@drawable/baseline_file_download_24"
+        app:layout_constraintBottom_toTopOf="@+id/nextFAB"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="@color/ufeNotSoDarkBrown" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/prevFAB"
