--- a/app/src/main/res/layout/fragment_places_item.xml
+++ b/app/src/main/res/layout/fragment_places_item.xml
@@ -22,13 +22,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/genericIV"
+<!--            <ImageView-->
+<!--                android:id="@+id/genericIV"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="100dp"-->
+<!--                android:scaleType="centerCrop"-->
+<!--                android:src="@drawable/baseline_location_on_24" />-->
+            <org.osmdroid.views.MapView
+                android:id="@+id/placesItemMAP"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/baseline_location_on_24" />
-
+                android:layout_height="100dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
