--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/home_Fragment2"
+        android:id="@+id/home_Fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="@string/MenuHome"
@@ -21,13 +21,13 @@
         android:title="@string/MenuLocations"
         android:icon="@drawable/baseline_my_location_24"/>
     <item
-        android:id="@+id/GEO_Fragment2"
+        android:id="@+id/GEO_Fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="@string/MenuGEO"
         android:icon="@drawable/baseline_satellite_24"/>
     <item
-        android:id="@+id/export_Fragment2"
+        android:id="@+id/export2Mail_Fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="@string/MenuExport"
